--- a/solver/Makefile
+++ b/solver/Makefile
@@ -7,6 +7,7 @@ LDFLAGS= #Linker options
 
 SOURCES= 	sokoban_solver.cpp \
 					breadth_first.cpp	\
+					state_generator.cpp \
 					common.cpp
 
 OBJECTS=$(SOURCES:.cpp=.o)  #Object files
