move all searched into one function

--- a/solver/Makefile
+++ b/solver/Makefile
@@ -6,8 +6,7 @@ INCPATH=
 LDFLAGS= #Linker options
 
 SOURCES= 	sokoban_solver.cpp \
-					breadth_first.cpp	\
-					a_star.cpp	\
+					informed_search.cpp	\
 					state_generator.cpp \
 					common.cpp
 
